# lab06

./: CMakeLists.txt  CPackConfig.cmake  DESCRIPTION  LICENSE.txt  README.md
.github/workflows/: ci.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
