cmake_minimum_required(VERSION 3.10)

project(solver-pckg VERSION 0.1.0.1 LANGUAGES C CXX)

set(PRINT_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
set(PRINT_VERSION_MINOR ${PROJECT_VERSION_MINOR})
set(PRINT_VERSION_PATCH ${PROJECT_VERSION_PATCH})
set(PRINT_VERSION_TWEAK 0)
set(PRINT_VERSION "${PRINT_VERSION_MAJOR}.${PRINT_VERSION_MINOR}.${PRINT_VERSION_PATCH}.${PRINT_VERSION_TWEAK}")

add_subdirectory(solver_application)
add_subdirectory(hello_world_application)

install(TARGETS solver_app
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib
)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPackConfig.cmake)
